@@ -4,8 +4,30 @@ import java.util.*;
 
 /**
  * Класс, представляющий контекстно-свободную грамматику.
- * Содержит множества нетерминалов и терминалов, стартовый символ,
- * а также правила продукции в виде отображения: нетерминал -> список правил.
+ *
+ * Пример грамматики:
+ *
+ *   S → begin STATEMENTS end
+ *
+ *   STATEMENTS → STATEMENT STATEMENTS
+ *               | ε
+ *
+ *   STATEMENT → IDENTIFIER := EXPR ;
+ *              | if ( COND ) writeln ( WRITE_ARG ) else writeln ( WRITE_ARG ) ;
+ *
+ *   EXPR → IDENTIFIER    | INTEGER_LITERAL | FLOAT_LITERAL
+ *
+ *   COND → REL_EXPR COND_TAIL
+ *   COND_TAIL → or REL_EXPR COND_TAIL | ε
+ *
+ *   REL_EXPR → IDENTIFIER REL_OP IDENTIFIER
+ *   REL_OP → < | > | = | <= | >= | <>
+ *
+ *   WRITE_ARG → STRING_LITERAL
+ *
+ * Терминалы (точно те строки, которые выдаёт лексер в token.value, за исключением обобщённых «IDENTIFIER» и «INTEGER_LITERAL» и т. д.):
+ *   begin, end, if, else, writeln, ":=", ";", "(", ")", "<", ">", "=", "<=", ">=", "<>", "or",
+ *   "IDENTIFIER", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "$"
  */
 public class Grammar {
     private final Set<String> nonTerminals;
@@ -22,12 +44,10 @@ public class Grammar {
         productions.forEach((nt, rules) -> this.productions.put(nt, new ArrayList<>(rules)));
     }
 
-    // Возвращается неизменяемый набор
     public Set<String> getNonTerminals() {
         return Collections.unmodifiableSet(nonTerminals);
     }
 
-    // Возвращается неизменяемый набор
     public Set<String> getTerminals() {
         return Collections.unmodifiableSet(terminals);
     }
@@ -36,12 +56,10 @@ public class Grammar {
         return startSymbol;
     }
 
-    // Возвращается неизменяемая копия карты правил
     public Map<String, List<List<String>>> getProductions() {
         return Collections.unmodifiableMap(productions);
     }
 
-    // Метод для вывода грамматики в более удобном виде
     @Override
     public String toString() {
         StringBuilder sb = new StringBuilder();
@@ -58,43 +76,88 @@ public class Grammar {
         return sb.toString();
     }
 
-    // Статический метод для создания Grammar по заданной грамматике с устранённой левой рекурсией
     public static Grammar exampleGrammar() {
-        Set<String> nonTerminals = Set.of("S", "STATEMENTS", "STATEMENT", "EXPR", "COND", "WRITE_ARG");
-        Set<String> terminals = Set.of(
-                "begin", "end", "if", "else", "writeln", ":=", ";", "(", ")", "<",
-                "IDENTIFIER", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "$"
+        // 1) Все нетерминалы
+        Set<String> nonTerminals = Set.of(
+                "S",
+                "STATEMENTS",
+                "STATEMENT",
+                "EXPR",
+                "COND",
+                "COND_TAIL",
+                "REL_EXPR",
+                "REL_OP",
+                "WRITE_ARG"
         );
-        String startSymbol = "S";
 
+        // 2) Все терминалы (ровно те строки, которые лексер положит в token.value,
+        //     плюс "IDENTIFIER", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "$")
+        Set<String> terminals = Set.of(
+                "begin", "end", "if", "else", "writeln",
+                ":=", ";", "(", ")",
+                "<", ">", "=", "<=", ">=", "<>",
+                "or",
+                "IDENTIFIER", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL",
+                "$"
+        );
+
+        String startSymbol = "S";
         Map<String, List<List<String>>> productions = new HashMap<>();
 
-        productions.put("S", Arrays.asList(
-                Arrays.asList("begin", "STATEMENTS", "end")
+        // S → begin STATEMENTS end
+        productions.put("S", List.of(
+                List.of("begin", "STATEMENTS", "end")
         ));
 
-        productions.put("STATEMENTS", Arrays.asList(
-                Arrays.asList("STATEMENT", "STATEMENTS"),
-                Arrays.asList("ε")
+        // STATEMENTS → STATEMENT STATEMENTS | ε
+        productions.put("STATEMENTS", List.of(
+                List.of("STATEMENT", "STATEMENTS"),
+                List.of("ε")
         ));
 
-        productions.put("STATEMENT", Arrays.asList(
-                Arrays.asList("IDENTIFIER", ":=", "EXPR", ";"),
-                Arrays.asList("if", "(", "COND", ")", "writeln", "(", "WRITE_ARG", ")", "else", "writeln", "(", "WRITE_ARG", ")", ";")
+        // STATEMENT → IDENTIFIER := EXPR ;
+        //           | if ( COND ) writeln ( WRITE_ARG ) else writeln ( WRITE_ARG ) ;
+        productions.put("STATEMENT", List.of(
+                List.of("IDENTIFIER", ":=", "EXPR", ";"),
+                List.of("if", "(", "COND", ")", "writeln", "(", "WRITE_ARG", ")", "else", "writeln", "(", "WRITE_ARG", ")", ";")
         ));
 
-        productions.put("EXPR", Arrays.asList(
-                Arrays.asList("INTEGER_LITERAL"),
-                Arrays.asList("FLOAT_LITERAL"),
-                Arrays.asList("IDENTIFIER")
+        // EXPR → IDENTIFIER | INTEGER_LITERAL | FLOAT_LITERAL
+        productions.put("EXPR", List.of(
+                List.of("IDENTIFIER"),
+                List.of("INTEGER_LITERAL"),
+                List.of("FLOAT_LITERAL")
         ));
 
-        productions.put("COND", Arrays.asList(
-                Arrays.asList("IDENTIFIER", "<", "IDENTIFIER")
+        // COND → REL_EXPR COND_TAIL
+        productions.put("COND", List.of(
+                List.of("REL_EXPR", "COND_TAIL")
         ));
 
-        productions.put("WRITE_ARG", Arrays.asList(
-                Arrays.asList("STRING_LITERAL")
+        // COND_TAIL → or REL_EXPR COND_TAIL | ε
+        productions.put("COND_TAIL", List.of(
+                List.of("or", "REL_EXPR", "COND_TAIL"),
+                List.of("ε")
+        ));
+
+        // REL_EXPR → IDENTIFIER REL_OP IDENTIFIER
+        productions.put("REL_EXPR", List.of(
+                List.of("IDENTIFIER", "REL_OP", "IDENTIFIER")
+        ));
+
+        // REL_OP → < | > | = | <= | >= | <>
+        productions.put("REL_OP", List.of(
+                List.of("<"),
+                List.of(">"),
+                List.of("="),
+                List.of("<="),
+                List.of(">="),
+                List.of("<>")
+        ));
+
+        // WRITE_ARG → STRING_LITERAL
+        productions.put("WRITE_ARG", List.of(
+                List.of("STRING_LITERAL")
         ));
 
         return new Grammar(nonTerminals, terminals, startSymbol, productions);
